// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Polygon2d snapshots should match snapshot for L-shaped polygon 1`] = `
{
  "properties": {
    "area": 75,
    "bounds": Box {
      "h": 10,
      "w": 10,
      "x": 0,
      "y": 0,
    },
    "center": Vec {
      "x": 5,
      "y": 5,
      "z": 1,
    },
    "isClosed": true,
    "isFilled": true,
    "perimeter": 40,
  },
  "segments": [
    {
      "end": Vec {
        "x": 10,
        "y": 0,
        "z": 1,
      },
      "index": 0,
      "length": 10,
      "start": Vec {
        "x": 0,
        "y": 0,
        "z": 1,
      },
    },
    {
      "end": Vec {
        "x": 10,
        "y": 5,
        "z": 1,
      },
      "index": 1,
      "length": 5,
      "start": Vec {
        "x": 10,
        "y": 0,
        "z": 1,
      },
    },
    {
      "end": Vec {
        "x": 5,
        "y": 5,
        "z": 1,
      },
      "index": 2,
      "length": 5,
      "start": Vec {
        "x": 10,
        "y": 5,
        "z": 1,
      },
    },
    {
      "end": Vec {
        "x": 5,
        "y": 10,
        "z": 1,
      },
      "index": 3,
      "length": 5,
      "start": Vec {
        "x": 5,
        "y": 5,
        "z": 1,
      },
    },
    {
      "end": Vec {
        "x": 0,
        "y": 10,
        "z": 1,
      },
      "index": 4,
      "length": 5,
      "start": Vec {
        "x": 5,
        "y": 10,
        "z": 1,
      },
    },
    {
      "end": Vec {
        "x": 0,
        "y": 0,
        "z": 1,
      },
      "index": 5,
      "length": 10,
      "start": Vec {
        "x": 0,
        "y": 10,
        "z": 1,
      },
    },
  ],
  "svgPath": "M 0 0 L 10 0 L 10 5 L 5 5 L 5 10 L 0 10",
}
`;

exports[`Polygon2d snapshots should match snapshot for arrow-shaped polygon 1`] = `
{
  "analysis": {
    "area": -10,
    "aspectRatio": 3,
    "bounds": Box {
      "h": 4,
      "w": 12,
      "x": 0,
      "y": 1,
    },
    "perimeter": 27.33421874187038,
    "segmentCount": 6,
    "vertexCount": 6,
  },
  "svgPath": "M 0 5 L 8 3 L 8 4 L 12 2.5 L 8 1 L 8 2",
}
`;

exports[`Polygon2d snapshots should match snapshot for complete polygon test matrix 1`] = `
[
  {
    "name": "triangle",
    "stats": {
      "area": 15,
      "bounds": Box {
        "h": 5,
        "w": 6,
        "x": 0,
        "y": 0,
      },
      "center": Vec {
        "x": 3,
        "y": 2.5,
        "z": 1,
      },
      "isClosed": true,
      "isFilled": false,
      "length": 17.6619037896906,
      "segments": 3,
      "vertices": 3,
    },
    "svgPath": "M 0 0 L 6 0 L 3 5",
  },
  {
    "name": "square",
    "stats": {
      "area": 16,
      "bounds": Box {
        "h": 4,
        "w": 4,
        "x": 0,
        "y": 0,
      },
      "center": Vec {
        "x": 2,
        "y": 2,
        "z": 1,
      },
      "isClosed": true,
      "isFilled": true,
      "length": 16,
      "segments": 4,
      "vertices": 4,
    },
    "svgPath": "M 0 0 L 4 0 L 4 4 L 0 4",
  },
  {
    "name": "pentagon",
    "stats": {
      "area": 21.398771616640953,
      "bounds": Box {
        "h": 5.706339097770922,
        "w": 5.427050983124842,
        "x": -2.4270509831248424,
        "y": -2.853169548885461,
      },
      "center": Vec {
        "x": 0.2864745084375788,
        "y": 0,
        "z": 1,
      },
      "isClosed": true,
      "isFilled": false,
      "length": 17.633557568774194,
      "segments": 5,
      "vertices": 5,
    },
    "svgPath": "M 3 0 L 0.9270509831248424 2.8531695488854605 L -2.427050983124842 1.7633557568774196 L -2.4270509831248424 -1.7633557568774192 L 0.9270509831248417 -2.853169548885461",
  },
]
`;

exports[`Polygon2d snapshots should match snapshot for complex polygon SVG path 1`] = `"M 0 0 L 10 0 L 15 5 L 10 10 L 0 10 L -5 5"`;

exports[`Polygon2d snapshots should match snapshot for concave polygon 1`] = `
{
  "properties": {
    "area": 75,
    "isClosed": true,
    "isFilled": true,
    "length": 44.14213562373095,
  },
  "segments": [
    {
      "end": Vec {
        "x": 10,
        "y": 0,
        "z": 1,
      },
      "start": Vec {
        "x": 0,
        "y": 0,
        "z": 1,
      },
    },
    {
      "end": Vec {
        "x": 5,
        "y": 5,
        "z": 1,
      },
      "start": Vec {
        "x": 10,
        "y": 0,
        "z": 1,
      },
    },
    {
      "end": Vec {
        "x": 10,
        "y": 10,
        "z": 1,
      },
      "start": Vec {
        "x": 5,
        "y": 5,
        "z": 1,
      },
    },
    {
      "end": Vec {
        "x": 0,
        "y": 10,
        "z": 1,
      },
      "start": Vec {
        "x": 10,
        "y": 10,
        "z": 1,
      },
    },
    {
      "end": Vec {
        "x": 0,
        "y": 0,
        "z": 1,
      },
      "start": Vec {
        "x": 0,
        "y": 10,
        "z": 1,
      },
    },
  ],
  "svgPath": "M 0 0 L 10 0 L 5 5 L 10 10 L 0 10",
}
`;

exports[`Polygon2d snapshots should match snapshot for irregular polygon 1`] = `
{
  "area": 186,
  "length": 56.06010639661685,
  "svgPath": "M 0 0 L 15 3 L 12 18 L 3 12 L -2 8",
}
`;

exports[`Polygon2d snapshots should match snapshot for minimal triangle with integer coordinates 1`] = `
{
  "properties": {
    "area": 0.5,
    "bounds": Box {
      "h": 1,
      "w": 1,
      "x": 0,
      "y": 0,
    },
    "center": Vec {
      "x": 0.5,
      "y": 0.5,
      "z": 1,
    },
    "length": 3.414213562373095,
  },
  "segments": [
    {
      "end": Vec {
        "x": 1,
        "y": 0,
        "z": 1,
      },
      "length": 1,
      "start": Vec {
        "x": 0,
        "y": 0,
        "z": 1,
      },
    },
    {
      "end": Vec {
        "x": 0,
        "y": 1,
        "z": 1,
      },
      "length": 1.4142135623730951,
      "start": Vec {
        "x": 1,
        "y": 0,
        "z": 1,
      },
    },
    {
      "end": Vec {
        "x": 0,
        "y": 0,
        "z": 1,
      },
      "length": 1,
      "start": Vec {
        "x": 0,
        "y": 1,
        "z": 1,
      },
    },
  ],
  "svgPath": "M 0 0 L 1 0 L 0 1",
  "vertices": [
    Vec {
      "x": 0,
      "y": 0,
      "z": 1,
    },
    Vec {
      "x": 1,
      "y": 0,
      "z": 1,
    },
    Vec {
      "x": 0,
      "y": 1,
      "z": 1,
    },
  ],
}
`;

exports[`Polygon2d snapshots should match snapshot for octagon (regular 8-sided polygon) 1`] = `
{
  "bounds": Box {
    "h": 30,
    "w": 30,
    "x": -15,
    "y": -15,
  },
  "center": Vec {
    "x": 0,
    "y": 0,
    "z": 1,
  },
  "circumference": 91.84402376762154,
  "length": 91.84402376762154,
  "segments": 8,
  "svgPath": "M 15 0 L 10.606601717798213 10.606601717798211 L 9.18485099360515e-16 15 L -10.606601717798211 10.606601717798213 L -15 1.83697019872103e-15 L -10.606601717798215 -10.606601717798211 L -2.7554552980815444e-15 -15 L 10.60660171779821 -10.606601717798215",
  "vertices": 8,
}
`;

exports[`Polygon2d snapshots should match snapshot for polygon properties 1`] = `
{
  "area": -100,
  "bounds": Box {
    "h": 10,
    "w": 20,
    "x": 5,
    "y": 10,
  },
  "center": Vec {
    "x": 15,
    "y": 15,
    "z": 1,
  },
  "isClosed": true,
  "isFilled": false,
  "length": 48.2842712474619,
  "segmentCount": 3,
  "vertexCount": 3,
}
`;

exports[`Polygon2d snapshots should match snapshot for polygon segments 1`] = `
[
  {
    "end": Vec {
      "x": 10,
      "y": 5,
      "z": 1,
    },
    "length": 11.180339887498949,
    "start": Vec {
      "x": 0,
      "y": 0,
      "z": 1,
    },
  },
  {
    "end": Vec {
      "x": 20,
      "y": 0,
      "z": 1,
    },
    "length": 11.180339887498949,
    "start": Vec {
      "x": 10,
      "y": 5,
      "z": 1,
    },
  },
  {
    "end": Vec {
      "x": 0,
      "y": 0,
      "z": 1,
    },
    "length": 20,
    "start": Vec {
      "x": 20,
      "y": 0,
      "z": 1,
    },
  },
]
`;

exports[`Polygon2d snapshots should match snapshot for polygon vertices 1`] = `
[
  Vec {
    "x": 0,
    "y": 0,
    "z": 1,
  },
  Vec {
    "x": 10,
    "y": 5,
    "z": 1,
  },
  Vec {
    "x": 20,
    "y": 0,
    "z": 1,
  },
]
`;

exports[`Polygon2d snapshots should match snapshot for polygon with floating point coordinates 1`] = `
{
  "geometry": {
    "area": 40.88368312560001,
    "bounds": Box {
      "h": 7.53087,
      "w": 7.675549999999999,
      "x": 1.23456,
      "y": 2.34567,
    },
    "center": Vec {
      "x": 5.072335,
      "y": 6.111105,
      "z": 1,
    },
    "length": 26.020694165991166,
  },
  "segments": [
    {
      "end": {
        "x": 8.91011,
        "y": 3.45678,
      },
      "length": 7.7555549920428,
      "start": {
        "x": 1.23456,
        "y": 2.34567,
      },
    },
    {
      "end": {
        "x": 7.65432,
        "y": 9.87654,
      },
      "length": 6.5414315697483225,
      "start": {
        "x": 8.91011,
        "y": 3.45678,
      },
    },
    {
      "end": {
        "x": 2.13579,
        "y": 8.24681,
      },
      "length": 5.754145743183779,
      "start": {
        "x": 7.65432,
        "y": 9.87654,
      },
    },
    {
      "end": {
        "x": 1.23456,
        "y": 2.34567,
      },
      "length": 5.969561861016268,
      "start": {
        "x": 2.13579,
        "y": 8.24681,
      },
    },
  ],
  "svgPath": "M 1.23456 2.34567 L 8.91011 3.45678 L 7.65432 9.87654 L 2.13579 8.24681",
  "vertices": [
    Vec {
      "x": 1.23456,
      "y": 2.34567,
      "z": 1,
    },
    Vec {
      "x": 8.91011,
      "y": 3.45678,
      "z": 1,
    },
    Vec {
      "x": 7.65432,
      "y": 9.87654,
      "z": 1,
    },
    Vec {
      "x": 2.13579,
      "y": 8.24681,
      "z": 1,
    },
  ],
}
`;

exports[`Polygon2d snapshots should match snapshot for polygon with negative coordinates 1`] = `
{
  "area": 50,
  "bounds": Box {
    "h": 10,
    "w": 10,
    "x": -10,
    "y": -10,
  },
  "length": 28.284271247461902,
  "svgPath": "M -10 -5 L -5 -10 L 0 -5 L -5 0",
  "vertices": [
    Vec {
      "x": -10,
      "y": -5,
      "z": 1,
    },
    Vec {
      "x": -5,
      "y": -10,
      "z": 1,
    },
    Vec {
      "x": 0,
      "y": -5,
      "z": 1,
    },
    Vec {
      "x": -5,
      "y": 0,
      "z": 1,
    },
  ],
}
`;

exports[`Polygon2d snapshots should match snapshot for regular polygon (hexagon) 1`] = `
{
  "bounds": Box {
    "h": 17.32050807568877,
    "w": 20,
    "x": -10,
    "y": -8.660254037844386,
  },
  "length": 60.00000000000001,
  "segmentCount": 6,
  "svgPath": "M 10 0 L 5.000000000000001 8.660254037844386 L -4.999999999999998 8.660254037844387 L -10 1.2246467991473533e-15 L -5.000000000000004 -8.660254037844386 L 5.000000000000001 -8.660254037844386",
}
`;

exports[`Polygon2d snapshots should match snapshot for self-intersecting polygon 1`] = `
{
  "bounds": Box {
    "h": 20,
    "w": 20,
    "x": 0,
    "y": 0,
  },
  "length": 96.5685424949238,
  "segments": 4,
  "svgPath": "M 0 0 L 20 20 L 20 0 L 0 20",
}
`;

exports[`Polygon2d snapshots should match snapshot for simple triangle SVG path 1`] = `"M 0 0 L 10 0 L 5 10"`;

exports[`Polygon2d snapshots should match snapshot for square polygon SVG path 1`] = `"M 0 0 L 10 0 L 10 10 L 0 10"`;

exports[`Polygon2d snapshots should match snapshot for star-shaped polygon 1`] = `
{
  "area": 146.94631307311826,
  "bounds": Box {
    "h": 19.021130325903073,
    "w": 18.090169943749473,
    "x": -8.090169943749475,
    "y": -9.510565162951536,
  },
  "length": 66.40655130520274,
  "segmentCount": 10,
  "svgPath": "M 10 0 L 4.045084971874737 2.938926261462366 L 3.0901699437494745 9.510565162951535 L -1.5450849718747368 4.755282581475768 L -8.090169943749473 5.877852522924733 L -5 6.123233995736766e-16 L -8.090169943749475 -5.87785252292473 L -1.5450849718747377 -4.755282581475767 L 3.0901699437494723 -9.510565162951536 L 4.045084971874736 -2.938926261462367",
}
`;

exports[`Polygon2d snapshots should match snapshot for very thin rectangle 1`] = `
{
  "area": 10,
  "aspectRatio": 1000,
  "bounds": Box {
    "h": 0.1,
    "w": 100,
    "x": 0,
    "y": 0,
  },
  "length": 200.2,
  "svgPath": "M 0 0 L 100 0 L 100 0.1 L 0 0.1",
}
`;
